--- a/Client-Side-Rendering/01.Contacts/style.css
+++ b/Client-Side-Rendering/01.Contacts/style.css
@@ -14,7 +14,12 @@ button {
   color: rgba(0, 0, 0, 0.45);
   outline: none;
   border: none;
-  box-shadow: 3px 5px 10px 2px rgba(0, 0, 0, 0.2), inset 0 -5px 4px -1px rgba(0, 0, 0, 0.1), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 3px 4px -1px rgba(255, 255, 255, 0.2), inset 0 0 5px 1px rgba(255, 255, 253, 0.8), inset 0 20px 30px 0 rgba(255, 255, 255, 0.2);
+  box-shadow: 3px 5px 10px 2px rgba(0, 0, 0, 0.2),
+    inset 0 -5px 4px -1px rgba(0, 0, 0, 0.1),
+    0 -10px 15px -1px rgba(255, 255, 255, 0.6),
+    inset 0 3px 4px -1px rgba(255, 255, 255, 0.2),
+    inset 0 0 5px 1px rgba(255, 255, 253, 0.8),
+    inset 0 20px 30px 0 rgba(255, 255, 255, 0.2);
   border-radius: 8px;
   margin: 0 2px;
   text-align: center;
@@ -27,7 +32,7 @@ button {
 
 button:hover {
   cursor: pointer;
-  background: #F0F0F0;
+  background: #f0f0f0;
 }
 
 .details {
@@ -58,7 +63,6 @@ h1 {
   margin: 3rem;
 }
 
-
-div.details{
-	display: none;
+div.details {
+  display: none;
 }
